--- a/Door2Door.WebApi/Properties/launchSettings.json
+++ b/Door2Door.WebApi/Properties/launchSettings.json
@@ -22,7 +22,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SQL_CONNECTION_STRING": "Data Source=10.108.130.188;Initial Catalog=Door2doorZbc;User ID=mar;Password=Kode1234"
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
@@ -34,5 +35,5 @@
       "publishAllPorts": true,
       "useSSL": true
     }
-  }
+  },
 }
